# PyFlame

./: .gitignore  Bug_Review.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: rocm_benchmark.py
build-rocm/: .ninja_deps  .ninja_log  build.ninja
build-rocm/python/pyflame/benchmarks/: __init__.py  models.py
build-rocm/python/pyflame/data/: dataset.py  sampler.py  transforms.py
build-rocm/python/pyflame/extend/: __init__.py
build-rocm/python/pyflame/hub/: __init__.py  pretrained.py  registry.py
build-rocm/python/pyflame/integrations/: onnx.py  wandb.py
build-rocm/python/pyflame/serving/: client.py  server.py
build-rocm/python/pyflame/tools/: __init__.py  debugger.py  profiler.py  visualization.py
build-rocm/python/pyflame/training/: __init__.py
build-rocm/tests/: pyflame_rocm_tests[1]_include.cmake  pyflame_tests[1]_include.cmake
docker/: Dockerfile  docker-compose.yml  serve.py
docs/: 01_csl_code_generation.md  02_lazy_evaluation_graph_building.md  03_memory_management_layout.md  04_build_system.md  05_phase2_ml_primitives.md  06_phase3_model_support.md  07_phase4_ecosystem.md  api_reference.md  best_practices.md  examples.md  getting_started.md  integration_guide.md  pytorch_migration_guide.md
docs/api/: rocm_api.md
docs/backends/: rocm.md
docs/tutorials/: getting_started_rocm.md
examples/: CMakeLists.txt
examples/cpp/: basic.cpp  matmul.cpp  mlp.cpp
examples/python/: basic.py  mlp.py
include/pyflame/: pyflame.hpp
include/pyflame/autograd/: autograd.hpp  grad_mode.hpp
include/pyflame/backend/: csl_codegen.hpp
include/pyflame/backend/rocm/: rocm_backend.hpp  rocm_blas.hpp  rocm_dnn.hpp  rocm_executor.hpp  rocm_kernels.hpp  rocm_memory.hpp  rocm_perf.hpp
include/pyflame/core/: allocator.hpp  dtype.hpp  layout.hpp  safe_math.hpp  tensor.hpp  tensor_impl.hpp
include/pyflame/data/: dataloader.hpp  dataset.hpp
include/pyflame/ir/: graph.hpp  node.hpp  op_type.hpp  shape_inference.hpp
include/pyflame/models/: resnet.hpp  transformer.hpp
include/pyflame/nn/: attention.hpp  conv.hpp  dropout.hpp  linear.hpp  loss.hpp  module.hpp  normalization.hpp  pooling.hpp
include/pyflame/optim/: lr_scheduler.hpp  optimizer.hpp
include/pyflame/utils/: serialize.hpp
python/: CMakeLists.txt  bindings.cpp  nn_bindings.cpp
python/pyflame/: __init__.py
python/pyflame/benchmarks/: __init__.py  models.py  results.py  runner.py
python/pyflame/data/: __init__.py  dataloader.py  dataset.py  sampler.py  transforms.py
python/pyflame/extend/: __init__.py  custom_op.py  plugin.py
python/pyflame/hub/: __init__.py  pretrained.py  registry.py
python/pyflame/integrations/: __init__.py  jupyter.py  mlflow.py  onnx.py  wandb.py
python/pyflame/metrics/: __init__.py  base.py  classification.py  regression.py
python/pyflame/serving/: __init__.py  client.py  inference.py  server.py
python/pyflame/tools/: __init__.py  debugger.py  profiler.py  visualization.py
python/pyflame/training/: __init__.py  callbacks.py  trainer.py
scripts/: build_rocm.sh
src/: CMakeLists.txt
src/autograd/: autograd.cpp  grad_mode.cpp
src/backend/: csl_codegen.cpp  csl_emitter.cpp  executor.cpp
src/backend/rocm/: rocm_blas.cpp  rocm_device.cpp  rocm_dnn.cpp  rocm_executor.cpp  rocm_kernels.hip  rocm_memory.cpp  rocm_perf.cpp
src/core/: context.cpp  tensor.cpp  tensor_impl.cpp
src/data/: dataloader.cpp
src/models/: resnet.cpp  transformer.cpp
src/nn/: attention.cpp  conv.cpp  dropout.cpp  linear.cpp  loss.cpp  module.cpp  normalization.cpp  pooling.cpp
src/ops/: elementwise.cpp  matmul.cpp  reduction.cpp
src/optim/: lr_scheduler.cpp  optimizer.cpp
src/python/: bindings_phase3.cpp
src/utils/: serialize.cpp
tests/: CMakeLists.txt  test_phase3_data.py  test_phase3_metrics.py  test_phase3_training.py  test_phase4_benchmarks.py  test_phase4_extend.py  test_phase4_serving.py  test_phase4_tools.py
tests/backend/rocm/: test_rocm_device.cpp  test_rocm_kernels.cpp  test_rocm_memory.cpp  test_rocm_operations.cpp
tests/cpp/: test_autograd.cpp  test_dtype.cpp  test_graph.cpp  test_layout.cpp  test_loss.cpp  test_nn_layers.cpp  test_operations.cpp  test_optim.cpp  test_shape_inference.cpp  test_tensor.cpp
tests/python/: test_rocm_backend.py
